--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <title>Shop Của Tý </title>
+  <meta name="google-site-verification" content="wvY4cQm4qTu68wGFcHNCodjI5ytSlp-gRpf2bqPhwmk" />
   <style>
     body {
         font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
