--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 
   <div class="products">
     <div class="product">
-      <img src="image/images.jpg" alt="iPhone 15 Plus">
+      <img src="images.jpg" alt="iPhone 15 Plus">
       <h3>iPhone 15 Plus</h3>
       <p>Giá: 26.000.000đ</p>
       <button onclick="addToCart('iPhone 15 Plus', 26000000)">Thêm vào giỏ</button>
