--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
     </div>
 
     <div class="product">
-      <img src="image/ip 12 prm.webp" alt="ip 12 prm">
+      <img src="ip 12 prm.webp" alt="ip 12 prm">
       <h3>iPhone 12 prm</h3>
       <p>Giá: 8.990.000đ</p>
       <button onclick="addToCart('ip 12 prm', 8990000)">Thêm vào giỏ</button>
