--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
     </div>
 
     <div class="product">
-      <img src="image/nitro-5-2021-an515-57.webp" alt="acer nitro 5">
+      <img src="nitro-5-2021-an515-57.webp" alt="acer nitro 5">
       <h3>acer nitro 5</h3>
       <p>Giá:25.000.000</p>
       <button onclick="addToCart('acer nitro5', 25000000)">Thêm vào giỏ</button>
