--- a/index.html
+++ b/index.html
@@ -10,20 +10,7 @@
   padding: 20px;
   margin: 0;
   background: linear-gradient(to right, #e0f7fa, #e1bee7); 
-}
-    <nav>
-  <ul style="list-style-type: none; display: flex; justify-content: center; background-color: #007bff; padding: 10px;">
-    <li style="margin: 0 15px;">
-      <a href="#home" style="text-decoration: none; color: white;">Trang chủ</a>
-    </li>
-    <li style="margin: 0 15px;">
-      <a href="#products" style="text-decoration: none; color: white;">Sản phẩm</a>
-    </li>
-    <li style="margin: 0 15px;">
-      <a href="#contact" style="text-decoration: none; color: white;">Liên hệ</a>
-    </li>
-  </ul>
-</nav>      
+}    
     
     h1 {
       text-align: center;
@@ -80,6 +67,13 @@
   </style>
 </head>
 <body>
+  <nav>
+    <ul>
+      <li><a href="#home">Trang chủ</a></li>
+      <li><a href="#products">Sản phẩm</a></li>
+      <li><a href="#cart">Giỏ hàng</a></li>
+    </ul>
+  </nav>
 
   <h1>📱 Shop Của Tý </h1>
 
